# app/Models/Etat.php
@@ -5,10 +5,10 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
-class EtatCommentaire extends Model
+class Etat extends Model
 {
     use HasFactory;
-    protected $table = 'etat_commentaire';
+    protected $table = 'etat';
     protected $fillable = ['id', 'intitule', 'deleted'];
     public $timestamps = true;
 }
